# dawg

./: .env.bak  .env.bak2  .env.bak3  .env.development  .env.example  .env.preview  .env.production  .env.vercel  .gitignore  .vercelignore  ANALYSIS_SCHEDULE.md  ARCHITECTURE_ISSUE_ANALYSIS.md  ARCHITECTURE_VALIDATION.md  AUDIO_OPTIMIZATION_SESSION.md  BUNNY_CDN_SETUP.md  CLIPPER_DESIGN.md  CONSOLE_LOG_CLEANUP_COMPLETE.md  CONSOLE_TEST.md  CONTROLLER_CLEANUP_PLAN.md  DAW_ENGINEERING_GUIDELINES.md  DISTORTION_FIX_COMPLETE.md  EFFECT_BYPASS_OPTIMIZATION_COMPLETE.md  ENV_VARIABLES.md  FINAL_AUDIO_SYSTEM_DOCUMENTATION.md  FINAL_DIAGNOSIS.md  INSTRUMENT_EDITOR_UPGRADE_PLAN.md  MEMORY_LEAK_FIX_REPORT.md  MIXER_ARCHITECTURE_SUMMARY.txt  MODERNDELAY_V2_MIGRATION_COMPLETE.md  MULTIBAND_EQ_V2_MIGRATION_COMPLETE.md  NEON_SETUP.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_STRATEGY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIX_REPORT.md  PERFORMANCE_HEALTH_CHECK_PLAN.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PHASE_3_COMPLETE.md  PIANO_ROLL_V7_IMPLEMENTATION_PLAN.md  PITCH_SHIFTER_ANALYSIS.md  (+36 more)
.agent/: cancel_action.md
api/: index.ts
client/: README.md  REORGANIZATION_SUMMARY.md  coordinate-test.js  index.html  kullanım notlarım  package-lock.json  package.json  reorganize.sh  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js  vitest.config.ts
client/src/lib/wasm/dawg-audio-dsp/: Cargo.toml
client/src/lib/wasm/dawg-audio-dsp/.cargo/: config.toml
client/src/lib/wasm/dawg-audio-dsp/src/: effects.rs  envelope.rs  filters.rs  graph.rs  lib.rs  sampler.rs  simd_ops.rs  synth.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENT_ROADMAP.md  ARCHITECTURE_POLISH_COMPLETE.md  ARRANGEMENT_AUDIO_RENDERING_PLAN.md  ARRANGEMENT_V2_ARCHITECTURE.md  AUDIO_ARCHITECTURE_README.md  AUDIO_ENGINE_MIGRATION.md  AUDIO_FLOW_DIAGRAMS.md  AUDIO_OPTIMIZATION_IMPLEMENTATION_PLAN.md  AUDIO_PLAYBACK_UI_FEEDBACK_ANALYSIS.md  DAWG_MASTER_PLAN.md  (+48 more)
(+1601 files in other folders)
