[package]
name = "dawg-audio-dsp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Create dynamic library for WASM

[dependencies]
wasm-bindgen = "0.2"     # JavaScript interop

[profile.release]
opt-level = 3            # Maximum optimization
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization (slower compile)
panic = 'abort'          # Smaller binary size

[profile.release.package."*"]
opt-level = 3
