[package]
name = "dawg-audio-dsp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Create dynamic library for WASM

[dependencies]
wasm-bindgen = "0.2"     # JavaScript interop
console_error_panic_hook = "0.1.7"
js-sys = "0.3"           # JavaScript global types

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = 3            # Maximum optimization
lto = true               # Link-time optimization  
codegen-units = 1        # Better optimization (slower compile)
# panic = 'abort' removed to allow panic bucket

[profile.release.package."*"]
opt-level = 3

# SIMD Feature Flags
[features]
default = ["simd"]
simd = []
